add: product pages

--- a/index.html
+++ b/index.html
@@ -88,7 +88,6 @@
           <div class="header-nav">
             <nav class="navbar navbar-expand-lg custom-navbar">
               <div class="container">
-
                 <!-- Mobile Menu Toggle -->
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                   aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -99,7 +98,7 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                   <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                      <a class="nav-link" href="#">
+                      <a class="nav-link active-btn" href="#">
                         Trang chủ
                       </a>
                     </li>
@@ -109,15 +108,16 @@
                       </a>
                     </li>
                     <li class="nav-item dropdown">
-                      <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                      <a class="nav-link " href = "tatcasanpham.html" id="navbarDropdown" role="button"
                         data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Sản phẩm
                       </a>
                       <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="#">Sản phẩm A</a>
-                        <a class="dropdown-item" href="#">Sản phẩm B</a>
-                        <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="#">Tất cả sản phẩm</a>
+                        <a class="dropdown-item" href="tatcasanpham.html">Pizza</a>
+                        <a class="dropdown-item" href="#">Khai vị</a>
+                        <a class="dropdown-item" href="#">Mỳ Ý</a>
+                        <a class="dropdown-item" href="#">Salad</a>
+                        <a class="dropdown-item" href="#">Thức uống</a>
                       </div>
                     </li>
                     <li class="nav-item">
@@ -127,7 +127,6 @@
                     </li>
                     <li class="nav-item">
                       <a class="nav-link" href="#">
-
                         Liên hệ
                       </a>
                     </li>
@@ -236,87 +235,9 @@
             </div>
           </div>
         </div>
-
+ <!-- Món ăn nổi bật -->
         <div class="row">
-          <div class="col-12 mt-4">
-            <div class="section-header">
-              <p>Món ăn nổi bật</p>
-              <!-- <div class="swipper">
-                <div class="swipper-wrapper">
-                  <div class="swipper-slide">
-                
-                  </div>
-                </div>
-              </div> -->
-
-            </div>
-            <div class="section-body">
-              <div class="product-list-scroll">
-                <div class="food-card">
-                  <div class="img-container">
-                    <img src="assets/images/0002257-spaghetti-shrimp-rose-30.webp" class="food-img" alt="Pizza 1">
-                    <img src="assets/images/heart-green.svg" alt="fav" class="fav-icon">
-                  </div>
-                  <div class="card-title mb-0">Pizza Puff_Gà BBQ Nướng Dứa</div>
-                  <div class="desc">
-                    Gà nướng dứa cùng phô mai thơm béo và sốt Thousand Island...
-                  </div>
-                  <a href="#" class="see-more">Xem thêm</a>
-                  <div class="d-flex justify-content-between align-items-center mt-2">
-                    <div>
-                      <div class="price-label">Giá chỉ từ</div>
-                      <div class="price-value">89.000₫</div>
-                    </div>
-                    <button class="btn btn-success">Thêm</button>
-                  </div>
-                </div>
-              </div>
-
-              <div class="product-list-scroll">
-                <div class="food-card">
-                  <div class="img-container">
-                    <img src="assets/images/0002257-spaghetti-shrimp-rose-30.webp" class="food-img" alt="Pizza 1">
-                    <img src="assets/images/heart-green.svg" alt="fav" class="fav-icon">
-                  </div>
-                  <div class="card-title mb-0">Pizza Puff_Gà BBQ Nướng Dứa</div>
-                  <div class="desc">
-                    Gà nướng dứa cùng phô mai thơm béo và sốt Thousand Island...
-                  </div>
-                  <a href="#" class="see-more">Xem thêm</a>
-                  <div class="d-flex justify-content-between align-items-center mt-2">
-                    <div>
-                      <div class="price-label">Giá chỉ từ</div>
-                      <div class="price-value">89.000₫</div>
-                    </div>
-                    <button class="btn btn-success">Thêm</button>
-                  </div>
-                </div>
-              </div>
-              <div class="product-list-scroll">
-                <div class="food-card">
-                  <div class="img-container">
-                    <img src="assets/images/0002257-spaghetti-shrimp-rose-30.webp" class="food-img" alt="Pizza 1">
-                    <img src="assets/images/heart-green.svg" alt="fav" class="fav-icon">
-                  </div>
-                  <div class="card-title mb-0">Pizza Puff_Gà BBQ Nướng Dứa</div>
-                  <div class="desc">
-                    Gà nướng dứa cùng phô mai thơm béo và sốt Thousand Island...
-                  </div>
-                  <a href="#" class="see-more">Xem thêm</a>
-                  <div class="d-flex justify-content-between align-items-center mt-2">
-                    <div>
-                      <div class="price-label">Giá chỉ từ</div>
-                      <div class="price-value">89.000₫</div>
-                    </div>
-                    <button class="btn btn-success">Thêm</button>
-                  </div>
-                </div>
-              </div>
-              <div class="mycard">
-                <img src="assets/images/swipper2.webp" alt="">
-              </div>
-            </div>
-          </div>
+        
         </div>
       </div>
     </div>
@@ -685,7 +606,7 @@
                 Công ty TNHH Dola Food chuyên phục vụ trong lĩnh vực nhà hàng. Mã số thuế: 123456xxxx - Ngày cấp: 13/05/2024 - Nơi cấp: Sở kế hoạch và đầu tư TPHCM - Website: dola-food.mysapo.net
               </p>
               <ul class="footer-contact list-unstyled mb-4">
-                <li class="d-flex align-items-start mb-3">
+                <li class="d-flex align-items-center mb-3">
                   <span class="footer-icon me-2"><i class="fas fa-map-marker-alt"></i></span>
                   <span>70 Lữ Gia, Phường 15, Quận 11, TP.HCM</span>
                 </li>
@@ -766,10 +687,8 @@
       </div>
     </div>
   </footer>
-</body>
   </main>
 </body>
-
 <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
 <script src="assets/js/main.js"></script>
 
