add: complete home page

--- a/tatcasanpham.html
+++ b/tatcasanpham.html
@@ -219,6 +219,56 @@
         </div>
       </div>
     </section>
+    <div class="container">
+      <section class="section-product">
+        <h3 class="title-module">
+          <a href="/pizza">Pizza</a>
+        </h3>
+        <div class="row row-fix">
+          <div class="col-xl-20 col-lg-3 col-md-4 col-6 col-fix">
+            <form action="" class="product-action">
+              <div class="product-thumbnail">
+                <a href="" class="img-thumb">
+                  <img
+                    src="https://bizweb.dktcdn.net/thumb/large/100/510/571/products/0003269-pizza-puff-chicken-delig.png?v=1708679416303"
+                    width="234" height="234" alt="">
+                </a>
+              </div>
+              <div class="product-info">
+                <h3 class="product-name">
+                  <a href="" class="line-clamp line-clamp-1">
+                    Pizza Puff_Gà BBQ Nướng Dứa
+                  </a>
+                </h3>
+                <div class="product-content">
+                  <span class="line-clamp line-clamp-2">
+
+                    Gà nướng dứa cùng phô mai thơm béo và sốt Thousand Island.
+                    1. Ăn vỏ bánh trước tiên: Nhóm người tạo...
+
+                  </span>
+                  <a href="#" class="see-more-content">Xem thêm</a>
+                </div>
+                <div class="group-form">
+                  <div class="price-box">
+                    <span>Giá chỉ từ</span>
+                    89.000đ
+                  </div>
+                  <a href="" title="Thêm" class="btn-views">
+                    Thêm
+                  </a>
+                </div>
+              </div>
+             
+            </form>
+          </div>
+          
+        </div>
+        <div class="see-more-col">
+
+        </div>
+      </section>
+    </div>
   </main>
 
 </body>
