add: complete allProductPage

--- a/gioithieu.html
+++ b/gioithieu.html
@@ -108,15 +108,16 @@
                       </a>
                     </li>
                     <li class="nav-item dropdown">
-                      <a class="nav-link dropdown-toggle" href="tatcasanpham.html" id="navbarDropdown" role="button"
+                      <a class="nav-link " href="tatcasanpham.html" id="navbarDropdown" role="button"
                         data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Sản phẩm
                       </a>
                       <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="#">Sản phẩm A</a>
-                        <a class="dropdown-item" href="#">Sản phẩm B</a>
-                        <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="#">Tất cả sản phẩm</a>
+                        <a class="dropdown-item" href="tatcasanpham.html">Pizza</a>
+                        <a class="dropdown-item" href="#">Khai vị</a>
+                        <a class="dropdown-item" href="#">Mỳ Ý</a>
+                        <a class="dropdown-item" href="#">Salad</a>
+                        <a class="dropdown-item" href="#">Thức uống</a>
                       </div>
                     </li>
                     <li class="nav-item">
