--- a/index.html
+++ b/index.html
@@ -1754,7 +1754,7 @@
     <!-- News Section (Tin tức mới nhất) -->
     <section class="news-section py-5">
       <div class="container">
-        <div class="text-center mb-4">
+        <div class="mb-4 text-center">
           <div class="section-subtitle text-danger" style="font-weight:700; font-size:1.5rem;">Tin tức</div>
           <h2 class="section-title mb-0"
             style="color:#05743b; font-family:'Lobster',cursive; font-size:3rem; font-weight:700;">Tin tức mới nhất</h2>
@@ -1765,7 +1765,7 @@
             <div class="swiper-slide">
               <div class="news-card">
                 <img src="assets/images/de-banh-pizza-mua-o-dau-0.webp" alt="news1" class="news-img">
-                <div class="news-content">
+                <div class="news-content ">
                   <h3 class="news-title">Để bánh pizza mua ở đâu đảm bảo chất lượng?</h3>
                   <div class="news-date">27/02/2024</div>
                   <div class="news-desc">Nếu bạn muốn tự làm bánh pizza tại nhà thì có thể chọn mua đế bánh pizza để
@@ -1778,7 +1778,7 @@
               <div class="news-card">
                 <img src="assets/images/cach-lam-pizza-xot-mayonnaise-4.webp" alt="news2" class="news-img">
                 <div class="news-content">
-                  <h3 class="news-title">Cách làm pizza xốt Mayonnaise thơm béo ng...</h3>
+                  <h3 class="news-title">Cách làm pizza xốt Mayonnaise thơm béo ngon ngất ngay</h3>
                   <div class="news-date">27/02/2024</div>
                   <div class="news-desc">Các món pizza xốt Mayonnaise luôn góp mặt vào menu "vàng" của chuỗi cửa hàng
                     Dola trên toàn quốc. Hô...</div>
