add: complete news page

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                       </div>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="#">
+                      <a class="nav-link" href="tintuc.html">
                         Tin tức
                       </a>
                     </li>
