add : complete contact page

--- a/tintuc.html
+++ b/tintuc.html
@@ -149,7 +149,7 @@
     </div>
     <div class="breadcrumb-custom">
       <div class="container">
-        <a href="index.html">Trang chủ</a> <span>&gt;</span> <span class="active">Tất cả sản phẩm</span>
+        <a href="index.html">Trang chủ</a> <span>&gt;</span> <span class="active">Tin tức</span>
       </div>
     </div>
   </header>
