--- a/lienhe.html
+++ b/lienhe.html
@@ -122,7 +122,7 @@
                       </a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="#">
+                      <a class="nav-link" href="faq.html">
                         Câu hỏi thường gặp
                       </a>
                     </li>
