--- a/faq.html
+++ b/faq.html
@@ -112,16 +112,16 @@
                       </div>
                     </li>
                     <li class="nav-item ">
-                      <a class="nav-link" href="#">
+                      <a class="nav-link" href="tintuc.html">
                         Tin tức
                       </a>
                     </li>
-                    <li class="nav-item active-btn">
-                      <a class="nav-link" href="#">
+                    <li class="nav-item">
+                      <a class="nav-link" href="lienhe.html">
                         Liên hệ
                       </a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item active-btn">
                       <a class="nav-link" href="#">
                         Câu hỏi thường gặp
                       </a>
@@ -132,7 +132,7 @@
                       </a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="#">
+                      <a class="nav-link" href="datlich.html">
                         Đặt bàn
                       </a>
                     </li>
@@ -141,7 +141,6 @@
               </div>
             </nav>
           </div>
-          <div></div>
         </div>
       </div>
     </div>
