--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                       </a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="#">
+                      <a class="nav-link" href="hethongcuahang.html">
                         Hệ thống của hàng
                       </a>
                     </li>
