--- a/index.html
+++ b/index.html
@@ -33,7 +33,12 @@
     <div class="header-center">
       <div class="container">
         <div class="row align-items-center">
-          <div class="col-lg-2 col-xl-2 col-12">
+          <div class="menu-bar d-lg-none d-flex">
+            <div class="icon-cus">
+              <i class="fas fa-bars"></i>
+            </div>
+          </div>
+          <div class="col-lg-2 col-xl-2 col-12 image-effect">
             <a href="">
               <img src="assets/images/logo.webp" alt="Dola Food Logo">
             </a>
@@ -46,10 +51,9 @@
             </form>
           </div>
           <div class="col-lg-7 col-xl-6">
-
             <ul class="d-flex align-items-center justify-content-end list-unstyled">
-              <li>
-                <div class="d-flex align-items-center">
+              <li >
+                <div class=" align-items-center d-none d-lg-inline-flex">
                   <img src="assets/images/delivery.webp" width="50" height="50" alt="User Icon">
                   <div class="ms-2 delivery-info">
                     <span>Giao hàng miễn phí</span>
@@ -57,27 +61,22 @@
                   </div>
                 </div>
               </li>
-              <li>
-                <div class="d-flex align-items-center icon ms-2">
+              <li >
+                <div class=" align-items-center icon ms-2 d-none d-lg-inline-flex">
                   <p><i class="fa-solid fa-user"></i></p>
               </li>
-              <li>
-                <div class="d-flex align-items-center icon ms-2">
+              <li class="li-cart">
+                <div class=" icon ms-2">
                   <p><i class="fa-solid fa-cart-shopping"></i></p>
                   <span class="cart-count">0</span>
               </li>
-              <li>
-
-                <a href="#" class=" custom-btn">Đặt món online</a>
-
+              <li >
+                <a href="tatcasanpham.html" class=" custom-btn d-none d-lg-inline-flex">Đặt món online</a>
               </li>
-              <li>
-
-                <a href="#" class=" custom-btn">Đặt bàn</a>
-
+              <li >
+                <a href="#" class=" custom-btn d-none d-lg-inline-flex">Đặt bàn</a>
               </li>
             </ul>
-
           </div>
         </div>
       </div>
@@ -88,17 +87,11 @@
           <div class="header-nav">
             <nav class="navbar navbar-expand-lg custom-navbar">
               <div class="container">
-                <!-- Mobile Menu Toggle -->
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-                  aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                  <span class="navbar-toggler-icon"></span>
-                </button>
-
                 <!-- Navigation Links -->
                 <div class="collapse navbar-collapse" id="navbarNav">
                   <ul class="navbar-nav ml-auto">
-                    <li class="nav-item">
-                      <a class="nav-link active-btn" href="#">
+                    <li class="nav-item active-btn">
+                      <a class="nav-link" href="index.html">
                         Trang chủ
                       </a>
                     </li>
@@ -108,19 +101,18 @@
                       </a>
                     </li>
                     <li class="nav-item dropdown">
-                      <a class="nav-link " href="tatcasanpham.html" id="navbarDropdown" role="button"
+                      <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                         data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Sản phẩm
                       </a>
                       <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="tatcasanpham.html">Pizza</a>
-                        <a class="dropdown-item" href="#">Khai vị</a>
-                        <a class="dropdown-item" href="#">Mỳ Ý</a>
-                        <a class="dropdown-item" href="#">Salad</a>
-                        <a class="dropdown-item" href="#">Thức uống</a>
+                        <a class="dropdown-item" href="#">Sản phẩm A</a>
+                        <a class="dropdown-item" href="#">Sản phẩm B</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="#">Tất cả sản phẩm</a>
                       </div>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item ">
                       <a class="nav-link" href="tintuc.html">
                         Tin tức
                       </a>
@@ -131,17 +123,17 @@
                       </a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="faq.html">
+                      <a class="nav-link" href="#">
                         Câu hỏi thường gặp
                       </a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="hethongcuahang.html">
+                      <a class="nav-link" href="#">
                         Hệ thống của hàng
                       </a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="#">
+                      <a class="nav-link" href="datlich.html">
                         Đặt bàn
                       </a>
                     </li>
@@ -150,11 +142,12 @@
               </div>
             </nav>
           </div>
-          <div></div>
         </div>
       </div>
     </div>
+  
   </header>
+
   <main>
     <div class="hero-section text-center">
       <div class="container mt-4">
@@ -171,7 +164,7 @@
         <div class="row">
           <div class="col-12">
             <div class="section-header text-center">
-              <b>Nổi bật</b>
+              <b class="d-block">Nổi bật</b>
               <a href="#">Danh mục nổi bật</a>
             </div>
             <div class="category-list d-flex mt-4">
@@ -239,7 +232,7 @@
             <span class="title">
               Món ăn nổi bật
             </span>
-            <div class="swiper featured-products-swiper1">
+            <div class="swiper featured-products-swiper">
               <div class="swiper-wrapper">
                 <div class="swiper-slide">
                   <div class="item">
@@ -905,7 +898,7 @@
           </div>
         </div>
       </div>
-      
+
     </section>
 
     <!-- Khai vị Section -->
@@ -1945,14 +1938,16 @@
       <div class="container">
         <div class="text-center mb-4">
           <div class="why-subtitle text-danger" style="font-weight:700; font-size:1.5rem;">Lý do</div>
-          <h2 class="why-title mb-0" style="color:#05743b; font-size:3rem; font-weight:700;">Tại sao chọn Dola Food?</h2>
+          <h2 class="why-title mb-0" style="color:#05743b; font-size:3rem; font-weight:700;">Tại sao chọn Dola Food?
+          </h2>
         </div>
         <div class="why-swiper swiper">
           <div class="swiper-wrapper">
             <div class="swiper-slide">
               <div class="why-item">
                 <div class="why-icon">
-                  <img src="https://bizweb.dktcdn.net/100/510/571/themes/941527/assets/lydo1.jpg?1727255430829" alt="Chất lượng món ăn hàng đầu">
+                  <img src="https://bizweb.dktcdn.net/100/510/571/themes/941527/assets/lydo1.jpg?1727255430829"
+                    alt="Chất lượng món ăn hàng đầu">
                 </div>
                 <div class="why-text">Chất lượng món ăn<br>hàng đầu</div>
               </div>
@@ -1960,7 +1955,8 @@
             <div class="swiper-slide">
               <div class="why-item">
                 <div class="why-icon">
-                  <img src="https://bizweb.dktcdn.net/100/510/571/themes/941527/assets/lydo2.jpg?1727255430829" alt="Dịch vụ chăm sóc khách hàng xuất sắc">
+                  <img src="https://bizweb.dktcdn.net/100/510/571/themes/941527/assets/lydo2.jpg?1727255430829"
+                    alt="Dịch vụ chăm sóc khách hàng xuất sắc">
                 </div>
                 <div class="why-text">Dịch vụ chăm sóc khách<br>hàng xuất sắc</div>
               </div>
@@ -1968,7 +1964,8 @@
             <div class="swiper-slide">
               <div class="why-item">
                 <div class="why-icon">
-                  <img src="https://bizweb.dktcdn.net/100/510/571/themes/941527/assets/lydo3.jpg?1727255430829" alt="Menu đa dạng phong phú">
+                  <img src="https://bizweb.dktcdn.net/100/510/571/themes/941527/assets/lydo3.jpg?1727255430829"
+                    alt="Menu đa dạng phong phú">
                 </div>
                 <div class="why-text">Menu đa dạng phong<br>phú</div>
               </div>
@@ -1976,7 +1973,8 @@
             <div class="swiper-slide">
               <div class="why-item">
                 <div class="why-icon">
-                  <img src="https://bizweb.dktcdn.net/100/510/571/themes/941527/assets/lydo4.jpg?1727255430829" alt="Chất lượng nguyên liệu cao cấp">
+                  <img src="https://bizweb.dktcdn.net/100/510/571/themes/941527/assets/lydo4.jpg?1727255430829"
+                    alt="Chất lượng nguyên liệu cao cấp">
                 </div>
                 <div class="why-text">Chất lượng nguyên liệu<br>cao cấp</div>
               </div>
@@ -1984,7 +1982,8 @@
             <div class="swiper-slide">
               <div class="why-item">
                 <div class="why-icon">
-                  <img src="https://bizweb.dktcdn.net/100/510/571/themes/941527/assets/lydo5.jpg?1727255430829" alt="Ưu đãi và khuyến mãi hấp dẫn">
+                  <img src="https://bizweb.dktcdn.net/100/510/571/themes/941527/assets/lydo5.jpg?1727255430829"
+                    alt="Ưu đãi và khuyến mãi hấp dẫn">
                 </div>
                 <div class="why-text">Ưu đãi và khuyến mãi<br>hấp dẫn</div>
               </div>
