feat: implement featured categories swiper for enhanced user experience

--- a/index.html
+++ b/index.html
@@ -160,41 +160,91 @@
     </div>
     <!-- Danh Mục Nổi Bật  -->
     <div class="featured-categories mt-4">
-      <div class="container">
-        <div class="row">
-          <div class="col-12">
+      <div class="container">     
             <div class="section-header text-center">
               <b class="d-block">Nổi bật</b>
               <a href="#">Danh mục nổi bật</a>
             </div>
-            <div class="category-list d-flex mt-4">
-              <div class="category-item">
-                <a href="#" class="d-flex align-items-center justify-content-between">
-                  <h3>Pizza<br>(13 món)</br></h3>
-                  <img src="assets/images/0002624-seafood-pesto-300.webp" alt="">
-                </a>
+            <div class="swiper featured-categories-swiper">
+              <div class="swiper-wrapper">
+                <!-- News Item 1 -->
+                 <div class="swiper-slide">
+                  <a href="/khai-vi" title="Khai vị">
+                    <h3>
+                      Khai vị<span>(13 món ăn)</span>
+                    </h3>
+                    <div class="thumb">
+                      <picture>
+                        <source media="(max-width: 567px)" srcset="//bizweb.dktcdn.net/thumb/medium/100/510/571/collections/0003862-bbq-ribs-platter-300.png?v=1709192861850">
+                        <img width="300" height="300" class="lazyload loaded" src="https://bizweb.dktcdn.net/100/510/571/collections/0002624-seafood-pesto-300.png?v=1709192852903" data-src="https://bizweb.dktcdn.net/100/510/571/collections/0002624-seafood-pesto-300.png?v=1709192852903" alt="Pizza" data-was-processed="true">
+                      </picture>
+                    </div>
+                  </a>
+  
+                 </div>
+                 <div class="swiper-slide">
+                  <a href="/khai-vi" title="Khai vị">
+                    <h3>
+                      Khai vị<span>(13 món ăn)</span>
+                    </h3>
+                    <div class="thumb">
+                      <picture>
+                        <source media="(max-width: 567px)" srcset="//bizweb.dktcdn.net/thumb/medium/100/510/571/collections/0003862-bbq-ribs-platter-300.png?v=1709192861850">
+                        <img width="300" height="300" class="lazyload loaded" src="https://bizweb.dktcdn.net/100/510/571/collections/0003862-bbq-ribs-platter-300.png?v=1709192861850" data-src="https://bizweb.dktcdn.net/100/510/571/collections/0003862-bbq-ribs-platter-300.png?v=1709192861850" alt="Khai vị" data-was-processed="true">
+                      </picture>
+                    </div>
+                  </a>
+  
+                 </div>
+                 <div class="swiper-slide">
+                  <a href="/khai-vi" title="Khai vị">
+                    <h3>
+                      Khai vị<span>(13 món ăn)</span>
+                    </h3>
+                    <div class="thumb">
+                      <picture>
+                        <source media="(max-width: 567px)" srcset="//bizweb.dktcdn.net/thumb/medium/100/510/571/collections/0003862-bbq-ribs-platter-300.png?v=1709192861850">
+                        <img width="300" height="300" class="lazyload loaded" src="https://bizweb.dktcdn.net/100/510/571/collections/0002257-spaghetti-shrimp-rose-30.png?v=1709192871587" data-src="https://bizweb.dktcdn.net/100/510/571/collections/0002257-spaghetti-shrimp-rose-30.png?v=1709192871587" alt="Mỳ Ý" data-was-processed="true">
+                      </picture>
+                    </div>
+                  </a>
+  
+                 </div>
+                 <div class="swiper-slide">
+                  <a href="/khai-vi" title="Khai vị">
+                    <h3>
+                      Khai vị<span>(13 món ăn)</span>
+                    </h3>
+                    <div class="thumb">
+                      <picture>
+                        <source media="(max-width: 567px)" srcset="//bizweb.dktcdn.net/thumb/medium/100/510/571/collections/0003862-bbq-ribs-platter-300.png?v=1709192861850">
+                        <img width="300" height="300" class="lazyload loaded" src="https://bizweb.dktcdn.net/100/510/571/collections/0002250-signature-salad-300.png?v=1709192880573" data-src="https://bizweb.dktcdn.net/100/510/571/collections/0002250-signature-salad-300.png?v=1709192880573" alt="Salad" data-was-processed="true">
+                      </picture>
+                    </div>
+                  </a>
+  
+                 </div>
+
+                 <div class="swiper-slide">
+                  <a href="/khai-vi" title="Khai vị">
+                    <h3>
+                      Khai vị<span>(13 món ăn)</span>
+                    </h3>
+                    <div class="thumb">
+                      <picture>
+                        <source media="(max-width: 567px)" srcset="//bizweb.dktcdn.net/thumb/medium/100/510/571/collections/0003862-bbq-ribs-platter-300.png?v=1709192861850">
+                        <img width="300" height="300" class="lazyload loaded" src="https://bizweb.dktcdn.net/100/510/571/collections/0002365-pepsi-can-300.png?v=1709192888617" data-src="https://bizweb.dktcdn.net/100/510/571/collections/0002365-pepsi-can-300.png?v=1709192888617" alt="Thức uống" data-was-processed="true">
+                      </picture>
+                    </div>
+                  </a>
+  
+                 </div>
+             
               </div>
-              <div class="category-item ">
-                <a href="#" class="d-flex align-items-center justify-content-between">
-                  <h3>Pizza<br>(13 món)</br></h3>
-                  <img src="assets/images/0002624-seafood-pesto-300.webp" alt="">
-                </a>
-              </div>
-              <div class="category-item ">
-                <a href="#" class="d-flex align-items-center justify-content-between">
-                  <h3>Pizza<br>(13 món)</br></h3>
-                  <img src="assets/images/0002624-seafood-pesto-300.webp" alt="">
-                </a>
-              </div>
-              <div class="category-item ">
-                <a href="#" class="d-flex align-items-center justify-content-between">
-                  <h3>Pizza<br>(13 món)</br></h3>
-                  <img src="assets/images/0002624-seafood-pesto-300.webp" alt="">
-                </a>
-              </div>
+              <!-- Swiper navigation -->
+              <div class="swiper-button-next"></div>
+              <div class="swiper-button-prev"></div>
             </div>
-          </div>
-        </div>
       </div>
     </div>
     <!-- About Section -->
