feat: add user dropdown menu with hover functionality and style enhancements

--- a/index.html
+++ b/index.html
@@ -61,9 +61,25 @@
                   </div>
                 </div>
               </li>
-              <li >
-                <div class=" align-items-center icon ms-2 d-none d-lg-inline-flex">
+              <li>
+                <div class=" align-items-center icon ms-2 d-none d-lg-inline-flex user-dropdown">
                   <p><i class="fa-solid fa-user"></i></p>
+                  <div class="dropdown-menu user-menu">
+                    <a href="#" class="dropdown-item">
+                      <i class="fas fa-user-plus"></i>
+                      Đăng ký
+                    </a>
+                    <a href="#" class="dropdown-item">
+                      <i class="fas fa-sign-in-alt"></i>
+                      Đăng nhập
+                    </a>
+                    <div class="dropdown-divider"></div>
+                    <a href="#" class="dropdown-item">
+                      <i class="fas fa-heart"></i>
+                      Danh sách yêu thích
+                    </a>
+                  </div>
+                </div>
               </li>
               <li class="li-cart">
                 <div class=" icon ms-2">
@@ -169,7 +185,7 @@
               <div class="swiper-wrapper">
                 <!-- News Item 1 -->
                  <div class="swiper-slide">
-                  <a href="/khai-vi" title="Khai vị">
+                  <a href="chitietsanpham.html" title="Khai vị">
                     <h3>
                       Khai vị<span>(13 món ăn)</span>
                     </h3>
@@ -262,7 +278,7 @@
             <p>Chào mừng bạn đến với Dola Food - điểm đến lý tưởng cho những người yêu thưởng thức pizza tại thành phố!
               Dola Food tự hào là địa chỉ pizza hàng đầu, nổi tiếng với chất lượng món ăn tuyệt vời, dịch vụ tận tâm và
               mức độ hài lòng cao từ phía khách hàng.</p>
-            <div class="d-flex justify-content-space-between flex-wrap">
+            <div class="d-flex justify-content-space-between">
               <div class="sub-image-about">
                 <img src="/assets/images/image_1.webp" alt="">
               </div>
