--- a/gioithieu.html
+++ b/gioithieu.html
@@ -32,6 +32,11 @@
     <div class="header-center">
       <div class="container">
         <div class="row align-items-center">
+          <div class="menu-bar d-lg-none d-flex">
+            <div class="icon-cus">
+              <i class="fas fa-bars"></i>
+            </div>
+          </div>
           <div class="col-lg-2 col-xl-2 col-12 image-effect">
             <a href="">
               <img src="assets/images/logo.webp" alt="Dola Food Logo">
@@ -45,10 +50,9 @@
             </form>
           </div>
           <div class="col-lg-7 col-xl-6">
-
             <ul class="d-flex align-items-center justify-content-end list-unstyled">
-              <li>
-                <div class="d-flex align-items-center">
+              <li >
+                <div class=" align-items-center d-none d-lg-inline-flex">
                   <img src="assets/images/delivery.webp" width="50" height="50" alt="User Icon">
                   <div class="ms-2 delivery-info">
                     <span>Giao hàng miễn phí</span>
@@ -57,26 +61,38 @@
                 </div>
               </li>
               <li>
-                <div class="d-flex align-items-center icon ms-2">
+                <div class=" align-items-center icon ms-2 d-none d-lg-inline-flex user-dropdown">
                   <p><i class="fa-solid fa-user"></i></p>
+                  <div class="dropdown-menu user-menu">
+                    <a href="#" class="dropdown-item">
+                      <i class="fas fa-user-plus"></i>
+                      Đăng ký
+                    </a>
+                    <a href="#" class="dropdown-item">
+                      <i class="fas fa-sign-in-alt"></i>
+                      Đăng nhập
+                    </a>
+                    <div class="dropdown-divider"></div>
+                    <a href="#" class="dropdown-item">
+                      <i class="fas fa-heart"></i>
+                      Danh sách yêu thích
+                    </a>
+                  </div>
+                </div>
               </li>
-              <li>
-                <div class="d-flex align-items-center icon ms-2">
+              <li class="li-cart">
+                <div class=" icon ms-2">
                   <p><i class="fa-solid fa-cart-shopping"></i></p>
                   <span class="cart-count">0</span>
+                  
               </li>
-              <li>
-
-                <a href="#" class=" custom-btn">Đặt món online</a>
-
+              <li >
+                <a href="tatcasanpham.html" class=" custom-btn d-none d-lg-inline-flex">Đặt món online</a>
               </li>
-              <li>
-
-                <a href="#" class=" custom-btn">Đặt bàn</a>
-
+              <li >
+                <a href="#" class=" custom-btn d-none d-lg-inline-flex">Đặt bàn</a>
               </li>
             </ul>
-
           </div>
         </div>
       </div>
@@ -87,62 +103,54 @@
           <div class="header-nav">
             <nav class="navbar navbar-expand-lg custom-navbar">
               <div class="container">
-
-                <!-- Mobile Menu Toggle -->
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-                  aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                  <span class="navbar-toggler-icon"></span>
-                </button>
-
                 <!-- Navigation Links -->
                 <div class="collapse navbar-collapse" id="navbarNav">
                   <ul class="navbar-nav ml-auto">
-                    <li class="nav-item">
+                    <li class="nav-item" data-page="index.html">
                       <a class="nav-link" href="index.html">
                         Trang chủ
                       </a>
                     </li>
-                    <li class="nav-item active-btn">
+                    <li class="nav-item active-btn" data-page="gioithieu.html">
                       <a class="nav-link" href="gioithieu.html">
                         Giới thiệu
                       </a>
                     </li>
-                    <li class="nav-item dropdown">
-                      <a class="nav-link " href="tatcasanpham.html" id="navbarDropdown" role="button"
+                    <li class="nav-item dropdown" data-page="tatcasanpham.html">
+                      <a class="nav-link dropdown-toggle" href="" id="navbarDropdown" role="button"
                         data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Sản phẩm
                       </a>
                       <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="tatcasanpham.html">Pizza</a>
-                        <a class="dropdown-item" href="#">Khai vị</a>
-                        <a class="dropdown-item" href="#">Mỳ Ý</a>
-                        <a class="dropdown-item" href="#">Salad</a>
-                        <a class="dropdown-item" href="#">Thức uống</a>
+                        <a class="dropdown-item" href="chitietsanpham.html">Pizza</a>
+                        <a class="dropdown-item" href="chitietsanpham.html">Khai vị</a>
+                        <a class="dropdown-item" href="chitietsanpham.html">Mỳ Ý</a>
+                        <a class="dropdown-item" href="chitietsanpham.html">Salad</a>
+                        <a class="dropdown-item" href="chitietsanpham.html">Thức uống</a>
                       </div>
                     </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="#">
+                    <li class="nav-item" data-page="tintuc.html">
+                      <a class="nav-link" href="tintuc.html">
                         Tin tức
                       </a>
                     </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="#">
-
+                    <li class="nav-item" data-page="lienhe.html">
+                      <a class="nav-link" href="lienhe.html">
                         Liên hệ
                       </a>
                     </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="#">
+                    <li class="nav-item" data-page="faq.html">
+                      <a class="nav-link" href="faq.html">
                         Câu hỏi thường gặp
                       </a>
                     </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="#">
-                        Hệ thống của hàng
+                    <li class="nav-item" data-page="hethongcuahang.html">
+                      <a class="nav-link" href="hethongcuahang.html">
+                        Hệ thống cửa hàng
                       </a>
                     </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="#">
+                    <li class="nav-item" data-page="datban.html">
+                      <a class="nav-link" href="datlich.html">
                         Đặt bàn
                       </a>
                     </li>
@@ -151,16 +159,13 @@
               </div>
             </nav>
           </div>
-          <div></div>
         </div>
       </div>
     </div>
-    <div class="breadcrumb-custom">
-      <div class="container">
-        <a href="index.html">Trang chủ</a> <span>&gt;</span> <span class="active">Giới thiệu</span>
-      </div>
-    </div>
+  
   </header>
+
+  
   <main>
     <div class="about-section">
       <div class="container my-5">
