fix: update image sources to use external URLs and enable looping for food menu swiper

--- a/index.html
+++ b/index.html
@@ -322,16 +322,16 @@
               mức độ hài lòng cao từ phía khách hàng.</p>
             <div class="d-flex justify-content-space-between">
               <div class="sub-image-about">
-                <img src="/assets/images/image_1.webp" alt="">
+                <img src="https://bizweb.dktcdn.net/100/510/571/themes/941527/assets/image_1.jpg?1727255430829" alt="">
               </div>
               <div class="sub-image-about">
-                <img src="/assets/images/image_2.webp" alt="">
+                <img src="https://bizweb.dktcdn.net/100/510/571/themes/941527/assets/image_2.jpg?1727255430829" alt="">
               </div>
               <div class="sub-image-about">
-                <img src="/assets/images/image_3.webp" alt="">
+                <img src="https://bizweb.dktcdn.net/100/510/571/themes/941527/assets/image_3.jpg?1727255430829" alt="">
               </div>
               <div class="sub-image-about">
-                <img src="/assets/images/image_4.webp" alt="">
+                <img src="https://bizweb.dktcdn.net/100/510/571/themes/941527/assets/image_4.jpg?1727255430829" alt="">
               </div>
             </div>
           </div>
