feat: implement cart page with product details, quantity controls, delivery information form, and improved styling

--- a/index.html
+++ b/index.html
@@ -64,16 +64,16 @@
                 <div class=" align-items-center icon ms-2 d-none d-lg-inline-flex user-dropdown">
                   <p><i class="fa-solid fa-user"></i></p>
                   <div class="dropdown-menu user-menu">
-                    <a href="#" class="dropdown-item">
+                    <a href="dangnhap.html" class="dropdown-item">
                       <i class="fas fa-user-plus"></i>
                       Đăng ký
                     </a>
-                    <a href="#" class="dropdown-item">
+                    <a href="dangnhap.html" class="dropdown-item">
                       <i class="fas fa-sign-in-alt"></i>
                       Đăng nhập
                     </a>
                     <div class="dropdown-divider"></div>
-                    <a href="#" class="dropdown-item">
+                    <a href="yeuthich.html" class="dropdown-item">
                       <i class="fas fa-heart"></i>
                       Danh sách yêu thích
                     </a>
